--- a/src/App/Header/Header.scss
+++ b/src/App/Header/Header.scss
@@ -1,6 +1,8 @@
 @import "../../sass/main.scss";
 
 $gutter: var(--gutter-container);
+$index-header: var(--index-header);
+
 
 .header {
     position: fixed;
@@ -9,5 +11,6 @@ $gutter: var(--gutter-container);
     padding: $gutter;
     padding-bottom: 0;
     background-color: white;
+    z-index: $index-header;
     // @include border(blue);
 }
